# DebtSustainabilityUK

./: CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml
data/: DATASOURCE.md
docs/overleaf/: main.tex  refs.bib
results/baseline/: debt_path_demo.csv
src/data/: download_obr_pfd.py  ingest_boe_yields.py  ingest_dmo_gilts.py  ingest_ons_psf.py  parse_efo_tables.py
src/model/: debt_dynamics.py  monte_carlo.py  scenarios.py
src/viz/: charts.py
tests/: test_debt_dynamics.py
