[project]
name = "uk-dsa"
version = "0.1.0"
description = "UK Debt Sustainability Analysis – Imperial Business School"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
extend-exclude = ["data/", "results/", "figures/"]
select = ["E","F","I","UP","B","C4","SIM","RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
